Update SharedHttpClientSessionManager.java